--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --port 3000",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "ipfs": "npx ipfs-deploy dist"
-  },
+    "serve": "vue-cli-service serve",
+    "build": "npm i moneymafia/repa-sdk && vue-cli-service build",
+    "lint": "vue-cli-service lint"  },
   "dependencies": {
     "@metamask/detect-provider": "^1.2.0",
     "@moneymafia/repa-sdk": "github:moneymafia/repa-sdk",
