--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "npm i repa-sdk && vue-cli-service serve",
-    "build": "npm i repa-sdk && vue-cli-service build"
+    "serve": "npm i dakopay-sdk && vue-cli-service serve",
+    "build": "npm i dakopay-sdk && vue-cli-service build"
   },
   "dependencies": {
     "@metamask/detect-provider": "^1.2.0",
     "core-js": "^3.8.3",
     "ethers": "^5.5.4",
     "mobile-device-detect": "^0.4.3",
-    "repa-sdk": "github:projectrepa/SDK",
+    "dakopay-sdk": "github:dakopay/SDK",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
